--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,369 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>João Pedro</title>
+    <script
+      src="https://kit.fontawesome.com/9914e2f51b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./style/main.css" />
   </head>
+
+  <script type="text/html" id="blank_window_template">
+    <div data-app="" class="__window">
+      <div class="__window_top_bar">
+        <span>Title</span>
+
+        <svg
+          data-minimize="true"
+          width="15"
+          height="15"
+          xmlns="http://www.w3.org/2000/svg"
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+        >
+          <path d="M0 12v1h23v-1h-23z" />
+        </svg>
+
+        <svg
+          data-maximize="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="15"
+          viewBox="0 0 24 24"
+        >
+          <path d="M22 2v20h-20v-20h20zm2-2h-24v24h24v-24z" />
+        </svg>
+
+        <svg
+          data-close="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="15"
+          viewBox="0 0 24 24"
+        >
+          <path
+            d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
+          />
+        </svg>
+      </div>
+
+      <div class="__window_content"></div>
+    </div>
+  </script>
+
+  <script type="text/html" data-title="Sobre mim" id="about_me_template">
+    <div class="__about_me">
+      <h1>Sobre mim,</h1>
+
+      <h2>João Pedro de Oliveira Martins Vieira</h2>
+
+      <div class="row">
+        <img src="../assets/eu.jpg" />
+
+        <p>
+          Atualmente sou bacharelando em Ciência da Computação na
+          <a href="http://www.ufu.br/" target="_blank"
+            >Universidade Federal de Uberlândia (UFU)</a
+          >
+          e desenvolvedor meio período na
+          <a href="https://www.asciiej.com.br/" target="_blank">Ascii</a>. No
+          meu tempo livre gosto de imaginar e criar soluções pra coisas que não
+          precisam de soluções ou já tem, o que me leva a pesquisar e aprender
+          sobre diversas tecnologias.
+        </p>
+      </div>
+    </div>
+  </script>
+
+  <script type="text/html" data-target="about_me" id="about_me_icon">
+    <span>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+      >
+        <path
+          d="M3.44 2l-.439-2h17.994l-.439 2h-17.116zm-1.44 3l-.439-2h20.879l-.44 2h-20zm10.099 10.716l.004.283h-5.939l-.048-.292c-.133-.779-.177-1.224.582-1.43.842-.227 1.684-.429 1.168-1.289-1.627-2.546-.849-3.99.634-3.99 1.454 0 2.516 1.39 1.355 3.99-.348.854.5 1.056 1.401 1.289.801.208.834.655.843 1.439zm6.628-4.716h-4.784l-.028 1h4.675l.137-1zm.273-2h-5l-.028.999h4.892l.136-.999zm-.548 4h-4.566l-.029.999h4.459l.136-.999zm-.273 2h-4.351l-.028.999h4.241l.138-.999zm5.821 3h-24l2 6h20l2-6zm-20.625-2l-1.085-8.001h19.411l-1.119 8.001h2.021l1.397-10h-24l1.356 10h2.019z"
+        />
+      </svg>
+    </span>
+  </script>
+
+  <script type="text/html" data-title="Meus projetos" id="projects_template">
+    <div class="__projects _scrollbar">
+      <h1>Meus projetos</h1>
+
+      <p>Sistemas e aplicações desenvolvidas por mim.</p>
+
+      <h2>Sites</h2>
+
+      <p>
+        Alguns dos projetos de minha autoria realizados durante os ultimos anos
+        de aprendizado em web.
+      </p>
+
+      <ul class="__projects_sites_list">
+        <li>
+          <a target="_blank" href="https://weather-climax.herokuapp.com/"
+            >ClimaX
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__projects_carousel _scrollbar">
+            <img src="../assets/climax.png" />
+            <img src="../assets/climax2.png" />
+          </div>
+
+          <span
+            >ClimaX é um site de consulta de previsão do tempo em qualquer lugar
+            do planeta. Feito no intuito de aprender sobre NodeJS e consumo de
+            APIs.</span
+          >
+        </li>
+
+        <li>
+          <a target="_blank" href="https://chat-anonimo.herokuapp.com/"
+            >Chat anônimo
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__projects_carousel _scrollbar">
+            <img src="../assets/chat_anonimo1.png" />
+            <img src="../assets/chat_anonimo2.png" />
+          </div>
+
+          <span
+            >Chat anônimo como já diz o nome é um site de bate papo anônimo.
+            Feito no intuito de aprender sobre NodeJS e Socket.IO.</span
+          >
+        </li>
+
+        <li>
+          <a target="_blank" href="https://tarefas-to-do.herokuapp.com/"
+            >Gerenciador de Tarefas
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__projects_carousel _scrollbar">
+            <img src="../assets/gerenciador_de_tarefas1.png" />
+            <img src="../assets/gerenciador_de_tarefas2.png" />
+            <img src="../assets/gerenciador_de_tarefas3.png" />
+            <img src="../assets/gerenciador_de_tarefas4.png" />
+          </div>
+
+          <span
+            >Gerenciador de Tarefas é um site de gerenciamento de tarefas a
+            fazer e completadas. Feito no intuito de aprender sobre NodeJS e
+            métodos de autenticação.</span
+          >
+        </li>
+
+        <li>
+          <a target="_blank" href="https://feiraej.herokuapp.com/"
+            >Feira Ascii
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__projects_carousel _scrollbar">
+            <img src="../assets/feira_ej1.png" />
+            <img src="../assets/feira_ej2.png" />
+            <img src="../assets/feira_ej3.png" />
+            <img src="../assets/feira_ej4.png" />
+          </div>
+
+          <span
+            >Feira Ascii é um site fictício de uma feira online. Foi
+            desenvolvido no processo seletivo/trainee da empresa
+            <a
+              class="__link_in_text"
+              target="_blank"
+              href="https://www.asciiej.com.br/"
+              >Ascii</a
+            >
+            em conjunto com outros membros, fui responsavel no Front End pela
+            pagina inicial e de carrinho, além de grande parte do backend feito
+            em NodeJS.</span
+          >
+        </li>
+
+        <li>
+          <a onclick="javascript:void(0)"
+            >Instagram Manager
+            <!-- <i class="fas fa-external-link-alt fa-sm"></i> -->
+          </a>
+
+          <div class="__projects_carousel _scrollbar">
+            <img src="../assets/instagram_manager1.png" />
+            <img src="../assets/instagram_manager2.png" />
+            <img src="../assets/instagram_manager3.png" />
+          </div>
+
+          <span
+            >Instagram Manager é uma aplicação feita utilizando Django e também
+            Selenium. Está atualmente em desenvolvimento mas já com algumas
+            funcionalidades. O objetivo desse app é seguir pessoas com base no
+            algoritmo de recomendados do Instagram e futuramente com base em
+            localizações e outras funcionalidades, salvando cada pessoa em um
+            banco de dados SQL, conta também com opção de parar de seguir.</span
+          >
+        </li>
+      </ul>
+    </div>
+  </script>
+
+  <script type="text/html" data-target="projects" id="projects_icon">
+    <span>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+      >
+        <path
+          d="M22 2v20h-20v-20h20zm2-2h-24v24h24v-24zm-4 7h-8v1h8v-1zm0 5h-8v1h8v-1zm0 5h-8v1h8v-1zm-10.516-11.304l-.71-.696-2.553 2.607-1.539-1.452-.698.71 2.25 2.135 3.25-3.304zm0 5l-.71-.696-2.552 2.607-1.539-1.452-.698.709 2.249 2.136 3.25-3.304zm0 5l-.71-.696-2.552 2.607-1.539-1.452-.698.709 2.249 2.136 3.25-3.304z"
+        />
+      </svg>
+    </span>
+  </script>
+
   <body>
-    <p>Meu curriculo!</p>
+    <main>
+      <div class="__desktop">
+        <div class="__desktop_icon" data-source="about_me">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="40"
+            height="40"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M3.44 2l-.439-2h17.994l-.439 2h-17.116zm-1.44 3l-.439-2h20.879l-.44 2h-20zm10.099 10.716l.004.283h-5.939l-.048-.292c-.133-.779-.177-1.224.582-1.43.842-.227 1.684-.429 1.168-1.289-1.627-2.546-.849-3.99.634-3.99 1.454 0 2.516 1.39 1.355 3.99-.348.854.5 1.056 1.401 1.289.801.208.834.655.843 1.439zm6.628-4.716h-4.784l-.028 1h4.675l.137-1zm.273-2h-5l-.028.999h4.892l.136-.999zm-.548 4h-4.566l-.029.999h4.459l.136-.999zm-.273 2h-4.351l-.028.999h4.241l.138-.999zm5.821 3h-24l2 6h20l2-6zm-20.625-2l-1.085-8.001h19.411l-1.119 8.001h2.021l1.397-10h-24l1.356 10h2.019z"
+            />
+          </svg>
+
+          <span>Sobre mim</span>
+        </div>
+
+        <div class="__desktop_icon" data-source="projects">
+          <span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M22 2v20h-20v-20h20zm2-2h-24v24h24v-24zm-4 7h-8v1h8v-1zm0 5h-8v1h8v-1zm0 5h-8v1h8v-1zm-10.516-11.304l-.71-.696-2.553 2.607-1.539-1.452-.698.71 2.25 2.135 3.25-3.304zm0 5l-.71-.696-2.552 2.607-1.539-1.452-.698.709 2.249 2.136 3.25-3.304zm0 5l-.71-.696-2.552 2.607-1.539-1.452-.698.709 2.249 2.136 3.25-3.304z"
+              />
+            </svg>
+          </span>
+
+          <span>Meus projetos</span>
+        </div>
+      </div>
+
+      <!-- <div data-app="" class="__window">
+        <div class="__window_top_bar">
+          <span>Title</span>
+
+          <svg
+            data-minimize="true"
+            width="15"
+            height="15"
+            xmlns="http://www.w3.org/2000/svg"
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+          >
+            <path d="M0 12v1h23v-1h-23z" />
+          </svg>
+
+          <svg
+            data-maximize="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="15"
+            height="15"
+            viewBox="0 0 24 24"
+          >
+            <path d="M22 2v20h-20v-20h20zm2-2h-24v24h24v-24z" />
+          </svg>
+
+          <svg
+            data-close="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="15"
+            height="15"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
+            />
+          </svg>
+        </div>
+
+        <div class="__window_content"></div>
+      </div> -->
+
+      <task_bar>
+        <div id="_menu" class="__menu_options unactive">
+          <ul>
+            <li>
+              <span class="__menu_item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M24 14.187v-4.374c-2.148-.766-2.726-.802-3.027-1.529-.303-.729.083-1.169 1.059-3.223l-3.093-3.093c-2.026.963-2.488 1.364-3.224 1.059-.727-.302-.768-.889-1.527-3.027h-4.375c-.764 2.144-.8 2.725-1.529 3.027-.752.313-1.203-.1-3.223-1.059l-3.093 3.093c.977 2.055 1.362 2.493 1.059 3.224-.302.727-.881.764-3.027 1.528v4.375c2.139.76 2.725.8 3.027 1.528.304.734-.081 1.167-1.059 3.223l3.093 3.093c1.999-.95 2.47-1.373 3.223-1.059.728.302.764.88 1.529 3.027h4.374c.758-2.131.799-2.723 1.537-3.031.745-.308 1.186.099 3.215 1.062l3.093-3.093c-.975-2.05-1.362-2.492-1.059-3.223.3-.726.88-.763 3.027-1.528zm-4.875.764c-.577 1.394-.068 2.458.488 3.578l-1.084 1.084c-1.093-.543-2.161-1.076-3.573-.49-1.396.581-1.79 1.693-2.188 2.877h-1.534c-.398-1.185-.791-2.297-2.183-2.875-1.419-.588-2.507-.045-3.579.488l-1.083-1.084c.557-1.118 1.066-2.18.487-3.58-.579-1.391-1.691-1.784-2.876-2.182v-1.533c1.185-.398 2.297-.791 2.875-2.184.578-1.394.068-2.459-.488-3.579l1.084-1.084c1.082.538 2.162 1.077 3.58.488 1.392-.577 1.785-1.69 2.183-2.875h1.534c.398 1.185.792 2.297 2.184 2.875 1.419.588 2.506.045 3.579-.488l1.084 1.084c-.556 1.121-1.065 2.187-.488 3.58.577 1.391 1.689 1.784 2.875 2.183v1.534c-1.188.398-2.302.791-2.877 2.183zm-7.125-5.951c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3zm0-2c-2.762 0-5 2.238-5 5s2.238 5 5 5 5-2.238 5-5-2.238-5-5-5z"
+                  />
+                </svg>
+
+                <p>Configurações</p>
+              </span>
+            </li>
+          </ul>
+
+          <div class="__menu_search">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="32"
+              height="32"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M23.809 21.646l-6.205-6.205c1.167-1.605 1.857-3.579 1.857-5.711 0-5.365-4.365-9.73-9.731-9.73-5.365 0-9.73 4.365-9.73 9.73 0 5.366 4.365 9.73 9.73 9.73 2.034 0 3.923-.627 5.487-1.698l6.238 6.238 2.354-2.354zm-20.955-11.916c0-3.792 3.085-6.877 6.877-6.877s6.877 3.085 6.877 6.877-3.085 6.877-6.877 6.877c-3.793 0-6.877-3.085-6.877-6.877z"
+              />
+            </svg>
+            <input type="text" />
+          </div>
+        </div>
+
+        <div id="_menu_icon" class="__task_bar_icon menu_icon">
+          <span>
+            <svg
+              width="24"
+              height="24"
+              xmlns="http://www.w3.org/2000/svg"
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+            >
+              <path
+                d="M12 22.246c-.428 0-1.099-.709-1.688-2.276-.579.295-1.082.527-1.571.738.767 1.992 1.858 3.292 3.259 3.292 1.44 0 2.552-1.371 3.322-3.452-.485-.201-.997-.43-1.581-.719-.599 1.667-1.298 2.417-1.741 2.417zm-4.709-2.216c-3.099 1.139-6.29 1.168-6.29-1.644 0-.939.435-2.257 1.796-4.082.581-.779 1.254-1.545 1.937-2.248 1.531-1.555 3.256-3.05 5.505-4.599-1.083-.596-2.264-1.167-3.416-1.59-1.18-.435-2.219-.676-3.015-.676-.508 0-.886.107-1.009.288-.133.192-.138.784.445 1.843l.21-.013c1.047 0 1.898.866 1.898 1.933 0 1.067-.851 1.931-1.898 1.931-1.048 0-1.897-.864-1.897-1.931 0-.346.089-.67.245-.951-.59-1.04-.802-1.86-.802-2.503 0-1.515 1.154-2.354 2.808-2.354 2.514 0 5.9 1.662 8.082 2.946 2.214-1.363 5.717-3.159 8.304-3.159 1.893 0 2.807 1.054 2.807 2.395 0 .939-.436 2.256-1.796 4.08-3.084 4.137-9.216 8.606-13.914 10.334zm14.917-4.305c.142-.27.22-.576.22-.902 0-1.068-.849-1.933-1.897-1.933s-1.897.865-1.897 1.933c0 1.066.849 1.93 1.897 1.93l.258-.017c.552 1.024.544 1.597.415 1.787-.124.181-.501.287-1.01.287-1.602 0-3.833-.944-5.27-1.657-.48.342-1.075.748-1.657 1.119 1.925 1.036 4.757 2.295 6.927 2.295 1.64 0 2.808-.83 2.808-2.354 0-.638-.211-1.455-.794-2.488zm-12.834.119h-.001l-.013-.01c-1.144-.81-2.272-1.7-3.317-2.631-2.817 2.877-3.611 4.963-3.238 5.524.126.189.492.299 1.003.299 2.35 0 6.08-2.018 8.287-3.465 2.709-1.775 5.8-4.328 7.736-6.926 1.506-2.018 1.552-3.081 1.366-3.361-.126-.19-.491-.298-1.003-.298-1.952 0-4.924 1.459-6.636 2.447 1.263.836 2.443 1.719 3.52 2.616-.408.415-.834.819-1.27 1.211-1.196-.982-2.524-1.946-3.901-2.81-1.581 1.036-3.173 2.254-4.603 3.552 1.075.951 2.356 1.949 3.721 2.873-.522.331-1.049.647-1.651.979zm2.626-5.844c1.104 0 2 .896 2 2s-.896 2-2 2-2-.896-2-2 .896-2 2-2zm-1.739-5.828c-.58-.285-1.095-.518-1.581-.718.77-2.082 1.882-3.454 3.32-3.454 1.403 0 2.495 1.302 3.261 3.292-.49.212-.996.447-1.572.739-.587-1.567-1.258-2.275-1.689-2.275-.441 0-1.139.75-1.739 2.416z"
+              />
+            </svg>
+          </span>
+        </div>
+
+        <div id="_taskbar_icons"></div>
+
+        <div class="__date_time">
+          <span id="date_time"></span>
+        </div>
+      </task_bar>
+    </main>
   </body>
+  <script src="./static/bundle.js"></script>
 </html>
