novo app Meus projetos

--- a/src/index.html
+++ b/src/index.html
@@ -107,14 +107,14 @@
         de aprendizado em web.
       </p>
 
-      <ul class="__projects_sites_list">
+      <ul>
         <li>
           <a target="_blank" href="https://weather-climax.herokuapp.com/"
             >ClimaX
             <i class="fas fa-external-link-alt fa-sm"></i>
           </a>
 
-          <div class="__projects_carousel _scrollbar">
+          <div class="__carousel _scrollbar">
             <img src="../assets/climax.png" />
             <img src="../assets/climax2.png" />
           </div>
@@ -132,7 +132,7 @@
             <i class="fas fa-external-link-alt fa-sm"></i>
           </a>
 
-          <div class="__projects_carousel _scrollbar">
+          <div class="__carousel _scrollbar">
             <img src="../assets/chat_anonimo1.png" />
             <img src="../assets/chat_anonimo2.png" />
           </div>
@@ -149,7 +149,7 @@
             <i class="fas fa-external-link-alt fa-sm"></i>
           </a>
 
-          <div class="__projects_carousel _scrollbar">
+          <div class="__carousel _scrollbar">
             <img src="../assets/gerenciador_de_tarefas1.png" />
             <img src="../assets/gerenciador_de_tarefas2.png" />
             <img src="../assets/gerenciador_de_tarefas3.png" />
@@ -169,7 +169,7 @@
             <i class="fas fa-external-link-alt fa-sm"></i>
           </a>
 
-          <div class="__projects_carousel _scrollbar">
+          <div class="__carousel _scrollbar">
             <img src="../assets/feira_ej1.png" />
             <img src="../assets/feira_ej2.png" />
             <img src="../assets/feira_ej3.png" />
@@ -197,7 +197,7 @@
             <!-- <i class="fas fa-external-link-alt fa-sm"></i> -->
           </a>
 
-          <div class="__projects_carousel _scrollbar">
+          <div class="__carousel _scrollbar">
             <img src="../assets/instagram_manager1.png" />
             <img src="../assets/instagram_manager2.png" />
             <img src="../assets/instagram_manager3.png" />
@@ -210,6 +210,168 @@
             algoritmo de recomendados do Instagram e futuramente com base em
             localizações e outras funcionalidades, salvando cada pessoa em um
             banco de dados SQL, conta também com opção de parar de seguir.</span
+          >
+        </li>
+      </ul>
+
+      <h2>Aplicativos Mobile</h2>
+
+      <p>
+        Os aplicativos mobile desenvolvidos por mim utilizando a tecnologia
+        React Native.
+      </p>
+
+      <ul>
+        <li>
+          <a
+            target="_blank"
+            href="https://play.google.com/store/apps/details?id=com.potatosenior.roleudi"
+            >Role Udi
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__carousel _scrollbar">
+            <img src="../assets/role_udi1.webp" />
+            <img src="../assets/role_udi2.webp" />
+            <img src="../assets/role_udi3.webp" />
+          </div>
+
+          <span
+            >Role Udi é um aplicativo de divulgação de festas e eventos
+            universitários na cidade de Uberlândia. Esse aplicativo eu fiz com
+            base em uma ideia que eu tive para um trabalho da matéria de
+            empreendedorismo do curso.</span
+          >
+        </li>
+
+        <li>
+          <a
+            target="_blank"
+            href="https://play.google.com/store/apps/details?id=com.potatosenior.contadortento"
+            >Marcador de Pontos
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__carousel _scrollbar">
+            <img src="../assets/marcador_de_pontos1.webp" />
+            <img src="../assets/marcador_de_pontos2.webp" />
+            <img src="../assets/marcador_de_pontos3.webp" />
+          </div>
+
+          <span
+            >É um aplicativo simples com o unico intuito de marcar pontos em
+            partidas de Truco ou qualquer outro jogo de baralho. Desenvolvi para
+            utilizar com meus amigos durante as partidas.</span
+          >
+        </li>
+      </ul>
+
+      <h2>Bots</h2>
+
+      <p>
+        Algumas das muitas idéias esquisitas que eu tive e acabaram sendo
+        realizadas.
+      </p>
+
+      <ul>
+        <li>
+          <a target="_blank" href="https://twitter.com/50centEmBonoros"
+            >50cent em reais
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__carousel _scrollbar">
+            <img src="../assets/50cent_em_reais1.png" />
+            <img src="../assets/50cent_em_reais2.png" />
+          </div>
+
+          <span
+            >É um bot feito em python que faz requisições à uma API que retorna
+            o valor atual do Dollar e faz a conversão de 50 centavos de doláres
+            em reais e publica no twitter junto com uma imagem do rapper 50cent
+            utilizando a API do Twitter.</span
+          >
+
+          <div class="__tweet">
+            <blockquote class="twitter-tweet">
+              <p lang="pt" dir="ltr">
+                ➖ Valor atual do
+                <a href="https://twitter.com/50cent?ref_src=twsrc%5Etfw"
+                  >@50cent</a
+                >: R$ 2.40
+                <a href="https://t.co/mpVpjSJstH">pic.twitter.com/mpVpjSJstH</a>
+              </p>
+              &mdash; 50cent em bonoros (@50centEmBonoros)
+              <a
+                href="https://twitter.com/50centEmBonoros/status/1238179414640295942?ref_src=twsrc%5Etfw"
+                >March 12, 2020</a
+              >
+            </blockquote>
+          </div>
+        </li>
+      </ul>
+
+      <h2>Programas</h2>
+
+      <p>
+        Alguns programas diversificados que fiz sem motivo ou por motivos
+        triviais.
+      </p>
+
+      <ul>
+        <li>
+          <a
+            target="_blank"
+            href="https://github.com/potatosenior/python-plays-poker"
+            >Python play's poker
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__carousel _scrollbar">
+            <img src="../assets/python_plays_poker1.png" />
+            <img src="../assets/python_plays_poker2.png" />
+            <img src="../assets/python_plays_poker3.png" />
+          </div>
+
+          <span
+            >É um programa em python que usa visão computacional para ler dados
+            de uma mesa de poker online e tomar decisões sobre a partida.</span
+          >
+        </li>
+
+        <li>
+          <a
+            target="_blank"
+            href="https://github.com/potatosenior/Baixador-de-musicas"
+            >Baixador de musicas do Youtube (nao me processem por favor)
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <div class="__carousel _scrollbar">
+            <img src="../assets/baixar_musicas1.png" />
+            <img src="../assets/baixar_musicas2.png" />
+          </div>
+
+          <span
+            >É um programa simples que baixa videos do youtube e salva no
+            formato de audio. Feito em python.</span
+          >
+        </li>
+
+        <li>
+          <a
+            target="_blank"
+            href="https://github.com/potatosenior/Remover-texto-do-nome-dos-arquivos"
+            >Removedor de texto do nome de arquivos
+            <i class="fas fa-external-link-alt fa-sm"></i>
+          </a>
+
+          <img src="../assets/remover_texto.png" />
+
+          <span
+            >É um script simples que remove determinado texto dos nomes de
+            arquivos no diretorio em que o programa está. Feito para um amigo
+            que estava precisando.</span
           >
         </li>
       </ul>
