Colocando embedd do twitter e alterar texto da top bar

--- a/src/index.html
+++ b/src/index.html
@@ -280,9 +280,18 @@
             <i class="fas fa-external-link-alt fa-sm"></i>
           </a>
 
-          <div class="__carousel _scrollbar">
+          <!-- <div class="__carousel _scrollbar">
             <img src="../assets/50cent_em_reais1.png" />
             <img src="../assets/50cent_em_reais2.png" />
+          </div> -->
+
+          <div class="__tweet _scrollbar">
+            <a
+              class="twitter-timeline"
+              data-tweet-limit="3"
+              href="https://twitter.com/50centEmBonoros?ref_src=twsrc%5Etfw"
+              >Tweets by 50centEmBonoros</a
+            >
           </div>
 
           <span
@@ -291,23 +300,6 @@
             em reais e publica no twitter junto com uma imagem do rapper 50cent
             utilizando a API do Twitter.</span
           >
-
-          <div class="__tweet">
-            <blockquote class="twitter-tweet">
-              <p lang="pt" dir="ltr">
-                ➖ Valor atual do
-                <a href="https://twitter.com/50cent?ref_src=twsrc%5Etfw"
-                  >@50cent</a
-                >: R$ 2.40
-                <a href="https://t.co/mpVpjSJstH">pic.twitter.com/mpVpjSJstH</a>
-              </p>
-              &mdash; 50cent em bonoros (@50centEmBonoros)
-              <a
-                href="https://twitter.com/50centEmBonoros/status/1238179414640295942?ref_src=twsrc%5Etfw"
-                >March 12, 2020</a
-              >
-            </blockquote>
-          </div>
         </li>
       </ul>
 
