Adicionando meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt_br">
   <head>
+    <meta name="description" content="Acesse meu portfólio!" />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, Portfólio, João Pedro de Oliveira Martins Vieira"
+    />
+    <meta name="author" content="João Pedro de Oliveira Martins Vieira" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>João Pedro</title>
