adiciona imagem no meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt_br">
+<html
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:fb="http://ogp.me/ns/fb#"
+  lang="pt_br"
+>
   <head>
     <meta name="description" content="Acesse meu portfólio!" />
     <meta
@@ -9,7 +13,10 @@
     <meta name="author" content="João Pedro de Oliveira Martins Vieira" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>João Pedro</title>
+    <title>Portfólio | João Pedro</title>
+    <meta property="og:image:width" content="450" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image" content="../assets/portfolio.png" />
     <script
       src="https://kit.fontawesome.com/9914e2f51b.js"
       crossorigin="anonymous"
@@ -75,7 +82,7 @@
           <a href="http://www.ufu.br/" target="_blank"
             >Universidade Federal de Uberlândia (UFU)</a
           >
-          e desenvolvedor meio período na
+          e desenvolvedor Full-Stack meio período na
           <a href="https://www.asciiej.com.br/" target="_blank">Ascii</a>. No
           meu tempo livre gosto de imaginar e criar soluções pra coisas que não
           precisam de soluções ou já tem, o que me leva a pesquisar e aprender
