arrumando meta tag de imagem

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio | João Pedro</title>
-    <meta property="og:image:width" content="450" />
-    <meta property="og:image:height" content="300" />
-    <meta property="og:image" content="../assets/portfolio.png" />
+    <meta property="og:site_name" content="Portfólio de João Pedro Vieira" />
+    <meta
+      property="og:image"
+      content="https://potatosenior.github.io/Me/assets/portfolio.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="800" />
+    <meta property="og:type" content="blog" />
     <script
       src="https://kit.fontawesome.com/9914e2f51b.js"
       crossorigin="anonymous"
