adicionando ultimas meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="800" />
     <meta property="og:type" content="blog" />
+    <meta property="og:url" content="https://potatosenior.github.io/Me" />
+    <meta property="og:title" content="Portfólio de João Pedro Vieira" />
+    <meta property="fb:app_id" content="" />
     <script
       src="https://kit.fontawesome.com/9914e2f51b.js"
       crossorigin="anonymous"
