--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="800" />
     <meta property="og:type" content="blog" />
-    <meta property="og:url" content="https://potatosenior.github.io/Me" />
+    <meta property="og:url" content="https://potatosenior.github.io/Me/Src" />
     <meta property="og:title" content="Portfólio de João Pedro Vieira" />
     <meta property="fb:app_id" content="" />
     <script
