--- a/src/index.html
+++ b/src/index.html
@@ -621,6 +621,11 @@
         </li>
       </ul>
 
+      <a href="../assets/portfolio.pdf" target="_blank">
+        Currículo
+        <i class="fas fa-external-link-alt fa-sm"></i>
+      </a>
+
       <p style="margin-top: auto; margin-bottom: 10px">
         Créditos dos icones:
         <a target="_blank" href="https://icons8.com.br/">icons8</a>
