--- a/src/index.html
+++ b/src/index.html
@@ -621,7 +621,7 @@
         </li>
       </ul>
 
-      <a href="../assets/portfolio.pdf" target="_blank">
+      <a href="../assets/curriculo.pdf" target="_blank">
         Currículo
         <i class="fas fa-external-link-alt fa-sm"></i>
       </a>
