--- a/src/index.html
+++ b/src/index.html
@@ -623,7 +623,7 @@
 
       <a href="../assets/curriculo.pdf" target="_blank">
         Currículo
-        <i class="fas fa-external-link-alt fa-sm"></i>
+        <i class="fa fa-download fa-sm"></i>
       </a>
 
       <p style="margin-top: auto; margin-bottom: 10px">
@@ -1060,6 +1060,13 @@
           </li>
         </ul>
       </div>
+
+      <p class="__under_development">
+        Em construção
+        <img
+          src="https://img.icons8.com/color/150/000000/under-construction.png"
+        />
+      </p>
 
       <task_bar>
         <div id="_menu" class="__menu_options unactive">
