--- a/src/index.html
+++ b/src/index.html
@@ -1055,8 +1055,8 @@
 
       <div id="__context_menu">
         <ul>
-          <li>
-            <span data-func="refresh">Atualizar</span>
+          <li data-func="refresh">
+            <span>Atualizar</span>
           </li>
         </ul>
       </div>
