Mover as janelas e empilha-las

--- a/src/index.html
+++ b/src/index.html
@@ -917,12 +917,18 @@
 
   <body>
     <main>
+      <div id="__logon_animation">
+        <span>Iniciando sistema</span>
+
+        <i class="fas fa-circle-notch fa-spin fa-2x"></i>
+      </div>
+
       <div class="__desktop">
         <div class="__desktop_icon" data-source="about_me">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="28"
+            height="28"
             viewBox="0 0 24 24"
           >
             <path
@@ -937,8 +943,8 @@
           <span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              width="40"
-              height="40"
+              width="28"
+              height="28"
               viewBox="0 0 24 24"
             >
               <path
@@ -953,8 +959,8 @@
         <div class="__desktop_icon" data-source="skills">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="28"
+            height="28"
             viewBox="0 0 24 24"
           >
             <path
@@ -968,8 +974,8 @@
         <div class="__desktop_icon" data-source="contact">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="28"
+            height="28"
             viewBox="0 0 24 24"
           >
             <path
@@ -983,8 +989,8 @@
         <div class="__desktop_icon" data-source="about_project">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="28"
+            height="28"
             viewBox="0 0 24 24"
           >
             <path
@@ -998,8 +1004,8 @@
         <div class="__desktop_icon __trashcan_icon" data-source="trashcan">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            width="40"
-            height="40"
+            width="28"
+            height="28"
             viewBox="0 0 24 24"
           >
             <path
@@ -1011,7 +1017,7 @@
         </div>
       </div>
 
-      <!-- <div data-app="" class="__window">
+      <!-- <div data-app="" class="__window" id="test_window">
         <div class="__window_top_bar">
           <span>Title</span>
 
@@ -1049,8 +1055,7 @@
           </svg>
         </div>
 
-        <div class="__window_content">
-        </div>
+        <div class="__window_content">Test</div>
       </div> -->
 
       <div id="__context_menu">
