Contextmenu dos atalhos funcionando

--- a/src/index.html
+++ b/src/index.html
@@ -1058,10 +1058,26 @@
         <div class="__window_content">Test</div>
       </div> -->
 
-      <div id="__context_menu">
+      <div class="__context_menu" id="__context_menu_desktop">
         <ul>
           <li data-func="refresh">
             <span>Atualizar</span>
+          </li>
+        </ul>
+      </div>
+
+      <div class="__context_menu" id="__context_menu_shortcut">
+        <ul>
+          <li data-func="open">
+            <span>Abrir</span>
+          </li>
+        </ul>
+      </div>
+
+      <div class="__context_menu" id="__context_menu_icon">
+        <ul>
+          <li data-func="close">
+            <span>Fechar</span>
           </li>
         </ul>
       </div>
