contextmenu dos icons na barra de tarefa e organizando imagens e favicon

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="Portfólio de João Pedro Vieira" />
     <meta
       property="og:image"
-      content="https://potatosenior.github.io/Me/assets/portfolio.png"
+      content="https://potatosenior.github.io/Me/assets/others/portfolio.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="800" />
@@ -31,6 +31,12 @@
     ></script>
     <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" href="./style/main.css" />
+    <!-- credits to icon8.com  -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://img.icons8.com/fluent/48/000000/portfolio.png"
+    />
   </head>
 
   <script type="text/html" id="blank_window_template">
@@ -83,7 +89,7 @@
       <h2>João Pedro de Oliveira Martins Vieira</h2>
 
       <div class="row">
-        <img src="../assets/eu.jpg" />
+        <img src="../assets/about_me/eu.jpg" />
 
         <p>
           Atualmente sou bacharelando em Ciência da Computação na
@@ -136,8 +142,8 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/climax.png" />
-            <img src="../assets/climax2.png" />
+            <img src="../assets/projects/climax.png" />
+            <img src="../assets/projects/climax2.png" />
           </div>
 
           <span
@@ -154,8 +160,8 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/chat_anonimo1.png" />
-            <img src="../assets/chat_anonimo2.png" />
+            <img src="../assets/projects/chat_anonimo1.png" />
+            <img src="../assets/projects/chat_anonimo2.png" />
           </div>
 
           <span
@@ -171,10 +177,10 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/gerenciador_de_tarefas1.png" />
-            <img src="../assets/gerenciador_de_tarefas2.png" />
-            <img src="../assets/gerenciador_de_tarefas3.png" />
-            <img src="../assets/gerenciador_de_tarefas4.png" />
+            <img src="../assets/projects/gerenciador_de_tarefas1.png" />
+            <img src="../assets/projects/gerenciador_de_tarefas2.png" />
+            <img src="../assets/projects/gerenciador_de_tarefas3.png" />
+            <img src="../assets/projects/gerenciador_de_tarefas4.png" />
           </div>
 
           <span
@@ -191,10 +197,10 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/feira_ej1.png" />
-            <img src="../assets/feira_ej2.png" />
-            <img src="../assets/feira_ej3.png" />
-            <img src="../assets/feira_ej4.png" />
+            <img src="../assets/projects/feira_ej1.png" />
+            <img src="../assets/projects/feira_ej2.png" />
+            <img src="../assets/projects/feira_ej3.png" />
+            <img src="../assets/projects/feira_ej4.png" />
           </div>
 
           <span
@@ -219,9 +225,9 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/instagram_manager1.png" />
-            <img src="../assets/instagram_manager2.png" />
-            <img src="../assets/instagram_manager3.png" />
+            <img src="../assets/projects/instagram_manager1.png" />
+            <img src="../assets/projects/instagram_manager2.png" />
+            <img src="../assets/projects/instagram_manager3.png" />
           </div>
 
           <span
@@ -252,9 +258,9 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/role_udi1.webp" />
-            <img src="../assets/role_udi2.webp" />
-            <img src="../assets/role_udi3.webp" />
+            <img src="../assets/projects/role_udi1.webp" />
+            <img src="../assets/projects/role_udi2.webp" />
+            <img src="../assets/projects/role_udi3.webp" />
           </div>
 
           <span
@@ -274,9 +280,9 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/marcador_de_pontos1.webp" />
-            <img src="../assets/marcador_de_pontos2.webp" />
-            <img src="../assets/marcador_de_pontos3.webp" />
+            <img src="../assets/projects/marcador_de_pontos1.webp" />
+            <img src="../assets/projects/marcador_de_pontos2.webp" />
+            <img src="../assets/projects/marcador_de_pontos3.webp" />
           </div>
 
           <span
@@ -302,8 +308,8 @@
           </a>
 
           <!-- <div class="__carousel _scrollbar">
-            <img src="../assets/50cent_em_reais1.png" />
-            <img src="../assets/50cent_em_reais2.png" />
+            <img src="../assets/projects/50cent_em_reais1.png" />
+            <img src="../assets/projects/50cent_em_reais2.png" />
           </div> -->
 
           <div class="__tweet _scrollbar">
@@ -341,9 +347,9 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/python_plays_poker1.png" />
-            <img src="../assets/python_plays_poker2.png" />
-            <img src="../assets/python_plays_poker3.png" />
+            <img src="../assets/projects/python_plays_poker1.png" />
+            <img src="../assets/projects/python_plays_poker2.png" />
+            <img src="../assets/projects/python_plays_poker3.png" />
           </div>
 
           <span
@@ -362,8 +368,8 @@
           </a>
 
           <div class="__carousel _scrollbar">
-            <img src="../assets/baixar_musicas1.png" />
-            <img src="../assets/baixar_musicas2.png" />
+            <img src="../assets/projects/baixar_musicas1.png" />
+            <img src="../assets/projects/baixar_musicas2.png" />
           </div>
 
           <span
@@ -380,7 +386,7 @@
             <i class="fas fa-external-link-alt fa-sm"></i>
           </a>
 
-          <img src="../assets/remover_texto.png" />
+          <img src="../assets/projects/remover_texto.png" />
 
           <span
             >É um script simples que remove determinado texto dos nomes de
@@ -434,7 +440,7 @@
         </li>
 
         <li>
-          <img title="C" src="../assets/c.png" />
+          <img title="C" src="../assets/skills/c.png" />
         </li>
 
         <li>
@@ -449,11 +455,11 @@
 
       <ul>
         <li>
-          <img title="React Native" src="../assets/react_native.png" />
+          <img title="React Native" src="../assets/skills/react_native.png" />
         </li>
 
         <li>
-          <img title="Express" src="../assets/express4.png" />
+          <img title="Express" src="../assets/skills/express4.png" />
         </li>
 
         <li>
@@ -464,7 +470,7 @@
         </li>
 
         <li>
-          <img title="ReactJS" src="../assets/reactjs2.png" />
+          <img title="ReactJS" src="../assets/skills/reactjs.png" />
         </li>
       </ul>
 
@@ -472,7 +478,7 @@
 
       <ul>
         <li>
-          <img title="Sqlite3" src="../assets/sqlite.png" />
+          <img title="Sqlite3" src="../assets/skills/sqlite.png" />
         </li>
 
         <li>
@@ -490,7 +496,7 @@
         </li>
 
         <li>
-          <img title="Knex" src="../assets/knex.png" />
+          <img title="Knex" src="../assets/skills/knex.png" />
         </li>
       </ul>
 
@@ -530,7 +536,7 @@
         </li>
 
         <li>
-          <img title="OpenCV" src="../assets/opencv.png" />
+          <img title="OpenCV" src="../assets/skills/opencv.png" />
         </li>
 
         <li>
@@ -621,7 +627,7 @@
         </li>
       </ul>
 
-      <a href="../assets/curriculo.pdf" target="_blank">
+      <a href="../assets/files/curriculo.pdf" target="_blank">
         Currículo
         <i class="fa fa-download fa-sm"></i>
       </a>
@@ -766,35 +772,35 @@
         <div class="__opt_image shown">
           <ul>
             <li>
-              <img src="../assets/wallpaper1.jpg" />
+              <img src="../assets/wallpapers/wallpaper1.jpg" />
             </li>
 
             <li>
-              <img src="../assets/wallpaper2.jpg" />
+              <img src="../assets/wallpapers/wallpaper2.jpg" />
             </li>
 
             <li>
-              <img src="../assets/wallpaper3.gif" />
+              <img src="../assets/wallpapers/wallpaper3.gif" />
             </li>
 
             <li>
-              <img src="../assets/wallpaper4.png" />
+              <img src="../assets/wallpapers/wallpaper4.png" />
             </li>
 
             <li>
-              <img src="../assets/wallpaper5.jpg" />
+              <img src="../assets/wallpapers/wallpaper5.jpg" />
             </li>
 
             <li>
-              <img src="../assets/wallpaper6.jpg" />
+              <img src="../assets/wallpapers/wallpaper6.jpg" />
             </li>
 
             <li>
-              <img src="../assets/wallpaper7.jpg" />
+              <img src="../assets/wallpapers/wallpaper7.jpg" />
             </li>
 
             <li>
-              <img src="../assets/wallpaper8.jpg" />
+              <img src="../assets/wallpapers/wallpaper8.jpg" />
             </li>
 
             <li class="__load_img">
