adicionando responsividade desktop

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 
       <h2>João Pedro de Oliveira Martins Vieira</h2>
 
-      <div class="row">
+      <div>
         <img src="../assets/about_me/eu.jpg" />
 
         <p>
@@ -734,7 +734,7 @@
             />
           </svg>
 
-          <span>Configurações</span>
+          <span>Voltar</span>
         </div>
 
         <ul>
